implement info href at header info icon

--- a/pages/board.html
+++ b/pages/board.html
@@ -48,7 +48,9 @@
                     <div class="header__content content-wrapper">
                         <h1 id="page-title">Kanban Project Management Tool</h1>
                         <div id="info-container" class="info-container">
-                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            <a href="./help.html">
+                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            </a>
                             <div class="header__user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
                                 <span>SM</span>
