--- a/pages/legal-notice.html
+++ b/pages/legal-notice.html
@@ -21,26 +21,28 @@
 
         <nav id="nav-menu" class="nav-menu">
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
-            <div class="nav-menu__buttons--container">
+            <div class="nav-menu__btn-container">
                 <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a class="nav-btn--selected deactivated" href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                 <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                 <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
-            <div class="nav-menu__bottom__buttons">
+            <div class="nav-menu__bottom__btn">
                 <a href="./privacy-policy.html">Privacy Policy</a>
-                <a class="nav-button--selected" href="./legal-notice.html">Legal Notice</a>
+                <a href="./legal-notice.html">Legal Notice</a>
             </div>
         </nav>
       
         <main>
             <div id="legal-page-container" class="content">
-                <header id="header">
+                 <header id="header">
                     <div class="header__content content-wrapper">
                         <h1 id="page-title">Kanban Project Management Tool</h1>
                         <div id="info-container" class="info-container">
-                            <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
-                            <div class="header__content--user-info">
+                            <a href="./help.html">
+                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                            </a>
+                            <div class="header__user-info">
                                 <img src="../assets/img/user-ellipse.svg" alt="User picture">
                                 <span>SM</span>
                             </div>
