--- a/pages/help.html
+++ b/pages/help.html
@@ -22,7 +22,7 @@
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
             <div class="nav-menu__btn-container">
                 <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
-                <a class="nav-btn--selected deactivated" href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
+                <a href="./add-task.html"><img src="../assets/img/add-task.svg" alt="Add Task">Add Task</a>
                 <a href="./board.html"><img src="../assets/img/board.svg" alt="Board">Board</a>
                 <a href="./contacts.html"><img src="../assets/img/contacts.svg" alt="Contacts">Contacts</a>
             </div>
