add summary button href links

--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="task-content__footer-btn-create">Create Task <img src="../assets/img/done.svg" alt="done icon"></div>
                     </div>
-
+                </div>
             </section>
 
         </main>
