--- a/pages/summary.html
+++ b/pages/summary.html
@@ -41,7 +41,7 @@
                             <h1 id="page-title">Kanban Project Management Tool</h1>
                             <div id="info-container" class="info-container">
                                 <a href="./help.html">
-                                    <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
+                                <img id="help-img" class="help-img" src="../assets/img/help.svg" alt="Help question mark">
                                 </a>
                                 <div class="header__user-info">
                                     <img src="../assets/img/user-ellipse.svg" alt="User picture">
@@ -62,29 +62,30 @@
                         <div class="summary-content__left">
                             <div class="summary-content__metrics--row">
 
-                                <div
+                                <a href="./board.html"
                                     class="metrics__box metrics__box--top metrics__icon--todo">
                                     <img class="" src="../assets/img/to-do.svg" alt="To-do Image">
                                     <div class="metrics__box--text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">To-do</span>
                                     </div>
-                                </div>
+                                </a>
 
-                                <div class="metrics__box metrics__box--top
-                                metrics__icon--done">
+                                <a href="./board.html"
+                                    class="metrics__box metrics__box--top
+                                    metrics__icon--done">
                                     <img src="../assets/img/done.png" alt="To-do Image">
                                     <div class="metrics__box--text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Done</span>
                                     </div>
-                                </div>
+                                </a>
 
                             </div>
 
                             <div class="summary-content__metrics--row">
 
-                                <div class="metrics__box metrics__box--middle">
+                                <a href="./board.html" class="metrics__box metrics__box--middle">
                                     <div class="metrics__box--left">
                                         <img src="../assets/img/urgent-summary.png" alt="To-do Image">
                                         <div class="metrics__box--text">
@@ -97,28 +98,28 @@
                                         <span>Date</span>
                                         <span>Upcoming Deadline</span>
                                     </div>
-                                </div>
+                                </a>
                             </div>
 
                             <div class="summary-content__metrics--row">
-                                <div class="metrics__box metrics__box--bottom">
+                                <a href="./board.html" class="metrics__box metrics__box--bottom">
                                     <div class="metrics__box--text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Tasks In <br>Board</span>
                                     </div>
-                                </div>
-                                <div class="metrics__box metrics__box--bottom">
+                                </a>
+                                <a href="./board.html" class="metrics__box metrics__box--bottom">
                                     <div class="metrics__box--text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Tasks In <br>Progress</span>
                                     </div>
-                                </div>
-                                <div class="metrics__box metrics__box--bottom">
+                                </a>
+                                <a href="./board.html" class="metrics__box metrics__box--bottom">
                                     <div class="metrics__box--text">
                                         <span class="metric-number">1</span>
                                         <span class="metric-txt">Awaiting <br>Feedback</span>
                                     </div>
-                                </div>
+                                </a>
 
                             </div>
                         </div>
