added IDs to borad table cols

--- a/pages/board.html
+++ b/pages/board.html
@@ -74,27 +74,27 @@
                     </div>
 
                     <div id="board-table" class="board__table">
-                        <div class="board__table__column">
+                        <div id="task-to-do" class="board__table__column">
                             <span><h3>To do</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'to do'"></span>
                             <div class="task">Task A</div>
-                            <div class="task">Task E</div>
+                            <div class="task">Task B</div>
                         </div>
 
-                        <div class="board__table__column">
-                            <span><h3>In progress</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'"></span>
-                            <div class="task">Task B</div>
+                        <div id="task-in-progress" class="board__table__column">
+                            <span><h3>In Progress</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'"></span>
+                            <div class="task">Task C</div>
+                            <div class="task">Task D</div>
+                        </div>
+
+                        <div id="task-await-feedback" class="board__table__column">
+                            <span><h3>Await Feedback</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'"></span>
+                            <div class="task">Task E</div>
                             <div class="task">Task F</div>
                         </div>
 
-                        <div class="board__table__column">
-                            <span><h3>Await feedback</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'"></span>
-                            <div class="task">Task C</div>
-                            <div class="task">Task G</div>
-                        </div>
-
-                        <div class="board__table__column">
+                        <div id="task-done" class="board__table__column">
                             <h3>Done</h3>
-                            <div class="task">Task D</div>
+                            <div class="task">Task G</div>
                             <div class="task">Task H</div>
                         </div>
                     </div>
