--- a/pages/board.html
+++ b/pages/board.html
@@ -75,16 +75,22 @@
                     </div>
 
                     <div id="board-table" class="board__table">
-                        <div id="task-to-do" class="board__table__column">
-                            <span><h3>To do</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'to do'"></span>
-                            <div class="tasks">
+                        <div id=to-do-container class="board__table__column">
+                            <span>
+                                <h3>To do</h3>
+                                <img src="../assets/img/add-btn-border.svg" alt="add task to 'to do'">
+                            </span>
+                            <div id="to-do-tasks" class="tasks">
                                 <div class="no-task">No active tasks</div>
                             </div>
                         </div>
 
-                        <div id="task-in-progress" class="board__table__column">
-                            <span><h3>In Progress</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'"></span>
-                            <div class="tasks">
+                        <div id="in-progress-container" class="board__table__column">
+                            <span>
+                                <h3>In Progress</h3>
+                                <img src="../assets/img/add-btn-border.svg" alt="add task to 'in progress'">
+                            </span>
+                            <div id="in-progress-tasks" class="tasks">
                                 <div class="task">
                                     <span class="task_epic">User Story</span>
                                     <span class="taskt_title">Kochwelt bla BLubb!</span>
@@ -105,24 +111,24 @@
                             </div>
                         </div>
 
-                        <div id="task-await-feedback" class="board__table__column">
-                            <span><h3>Await Feedback</h3> <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'"></span>
-                            <div class="tasks"> 
+                        <div id="await-feedback-container" class="board__table__column">
+                            <span><h3>Await Feedback</h3> 
+                                <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
+                            </span>
+                            <div id="feedback-tasks" class="tasks"> 
                                 <div class="task">Task B</div>
                                 <div class="task">Task C</div>
                             </div>
                         </div>
 
-                        <div id="task-done" class="board__table__column">
+                        <div id="done-container" class="board__table__column">
                             <h3>Done</h3>
-                            <div class="tasks">
+                            <div id="done-tasks" class="tasks">
                                 <div class="task">Task D</div>
                                 <div class="task">Task E</div>
                             </div>
                         </div>
                     </div>
-
-
                 </section>
             </div>
         </main>
