--- a/pages/board.html
+++ b/pages/board.html
@@ -115,7 +115,7 @@
                             <span><h3>Await Feedback</h3> 
                                 <img src="../assets/img/add-btn-border.svg" alt="add task to 'await feedback'">
                             </span>
-                            <div id="feedback-tasks" class="tasks"> 
+                            <div id="await-feedback-tasks" class="tasks"> 
                                 <div class="task">Task B</div>
                                 <div class="task">Task C</div>
                             </div>
