--- a/pages/summary.html
+++ b/pages/summary.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="../styles/navigation.css">
     <link rel="stylesheet" href="../styles/summary.css">
 
-    <script src="../script.js">defer</script>
-    <script src="../scripts/main.js">defer</script>
-    <script src="../scripts/navigation.js">defer</script>
-    <script src="../scripts/summary.js">defer</script>
-    <script src="../templates/tpl_summary.js">defer</script>
+    <script src="../script.js" defer></script>
+    <script src="../scripts/main.js" defer></script>
+    <script src="../scripts/navigation.js" defer></script>
+    <script src="../scripts/summary.js" defer></script>
+    <script src="../templates/tpl_summary.js" defer></script>
 </head>
 
     <body>
