--- a/pages/board.html
+++ b/pages/board.html
@@ -29,7 +29,7 @@
 
     <body>
 
-        <nav id="nav-menu" class="nav-menu">
+        <nav aria-label="Primary navigation" id="nav-menu" class="nav-menu">
             <img id="logo" src="../assets/img/logo-white.png" alt="Join Logo">
             <div class="nav-menu__btn-container">
                 <a href="./summary.html"><img src="../assets/img/summary.svg" alt="Summary">Summary</a>
@@ -59,6 +59,14 @@
                         </div>
                     </div>
                 </header>
+
+                <nav aria-label="submenu" class="content-wrapper d-none"> 
+                    <ul class="submenu ">
+                        <li><a href="./legal-notice.html">Legal Notice</a></li>
+                        <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="#">Log Out</a></li>
+                    </ul>
+                </nav>
             
                 <section id="board" class="board-content content-wrapper">
                     <div id="board-head" class="board__head">
