--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 alt="the word: join with a big J with a blue dot on the left side,">
             <div class="header__signup">
                 <span class="header__signup__message">Not a Join user?</span>
-                <button class="btn header__signup__signupBtn" onclick="location.href='/pages/sign-up.html'">Sign
+                <button class="btn header__signup__signupBtn filled-btn" onclick="location.href='/pages/sign-up.html'">Sign
                     up</button>
             </div>
         </header>
@@ -24,23 +24,23 @@
             <form class="useraccess-form">
                 <div class="useraccess-form__header">
                     <h1>Log in</h1>
-                    <div class="useraccess-form__header__bluestrip"></div>
+                    <div class="header__bluestrip"></div>
                 </div>
 
-                <div class="useraccess-form__inputfields">
-                    <div class="useraccess-form__inputfield__wrapper">
-                        <input id="email" type="email" placeholder="Email" aria-label="email" >
-                        <img class="useraccess-form__inputfields__icon" src="/assets/img/mail.svg" alt="icon of an email">
+                <div class="form__inputfields">
+                    <div class="inputfield__wrapper">
+                        <input type="email" placeholder="Email" aria-label="email" >
+                        <img src="/assets/img/mail.svg" alt="icon of an email">
                     </div>
 
-                    <div class="useraccess-form__inputfield__wrapper">
-                        <input id="password" type="password" placeholder="Password" aria-label="password" >
-                        <img class="useraccess-form__inputfields__icon" src="/assets/img/lock.svg" alt="icon of a lock">
+                    <div class="inputfield__wrapper">
+                        <input type="password" placeholder="Password" aria-label="password" >
+                        <img src="/assets/img/lock.svg" alt="icon of a lock">
                     </div>
                 </div>
                 
                 <div class="useraccess-form__btnholder">
-                    <button class="btn">Log in</button>
+                    <button class="btn filled-btn">Log in</button>
                     <button class="btn guest">Guest Log in</button>
                 </div>
             </form>
@@ -48,8 +48,8 @@
 
         <footer class="content-wrapper">
             <div class="footer__privacy-legal-box">
-                <a href="/pages/privacy-policy.html" class="footer__privacy-legal-box__links">Privacy Policy</a>
-                <a href="/pages/legal-notice.html" class="footer__privacy-legal-box__links">Legal notice</a>
+                <a href="/pages/privacy-policy.html">Privacy Policy</a>
+                <a href="/pages/legal-notice.html">Legal notice</a>
             </div>
         </footer>
     </body>
