--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -12,8 +12,8 @@
 
 <body>
     <header class="content-wrapper header">
-            <img class="header__joinlogo" src="../assets/img/logo-black.png"
-                alt="the word: join with a big J with a blue dot on the left side,">
+        <img class="header__joinlogo" src="../assets/img/logo-black.png"
+            alt="the word: join with a big J with a blue dot on the left side,">
     </header>
 
     <main class="content-wrapper">
@@ -22,47 +22,44 @@
                 alt="blue arrow that points to the left" onclick="location.href='../index.html'">
             <div class="useraccess-form__header">
                 <h1>Sign up</h1>
-                <div class="useraccess-form__header__bluestrip"></div>
+                <div class="header__bluestrip"></div>
             </div>
 
-            <div class="useraccess-form__inputfields">
-                <div class="useraccess-form__inputfield__wrapper">
-                    <input id="name" type="text" placeholder="Name" aria-label="name">
-                    <img class="useraccess-form__inputfields__icon" src="../assets/img/person.svg"
-                        alt="icon of an person">
+            <div class="form__inputfields">
+                <div class="inputfield__wrapper">
+                    <input type="text" placeholder="Name" aria-label="name">
+                    <img src="../assets/img/person.svg" alt="icon of an person">
                 </div>
 
-                <div class="useraccess-form__inputfield__wrapper">
-                    <input id="email" type="email" placeholder="Email" aria-label="email">
-                    <img class="useraccess-form__inputfields__icon" src="../assets/img/mail.svg" alt="icon of an email">
+                <div class="inputfield__wrapper">
+                    <input type="email" placeholder="Email" aria-label="email">
+                    <img src="../assets/img/mail.svg" alt="icon of an email">
                 </div>
 
-                <div class="useraccess-form__inputfield__wrapper">
-                    <input id="password" type="password" placeholder="Password" aria-label="password">
-                    <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
+                <div class="inputfield__wrapper">
+                    <input type="password" placeholder="Password" aria-label="password">
+                    <img src="../assets/img/lock.svg" alt="icon of a lock">
                 </div>
 
-                <div class="useraccess-form__inputfield__wrapper">
-                    <input id="confirm-password" type="password" placeholder="Confirm Password" aria-label="confirm password">
-                    <img class="useraccess-form__inputfields__icon" src="../assets/img/lock.svg" alt="icon of a lock">
+                <div class="inputfield__wrapper">
+                    <input type="password" placeholder="Confirm Password" aria-label="confirm password">
+                    <img src="../assets/img/lock.svg" alt="icon of a lock">
                 </div>
 
                 <p class="useraccess-form__privacy-policy">
-                    <img src="../assets/img/checkbox-unchecked.svg" class="useraccess-form__privacy-policy__checkbox" alt="icon of a checkbox">
-                    <span class="useraccess-form__privacy-policy__infotext">I accept the
-                        <a href="/pages/privacy-policy.html" class="useraccess-form__privacy-policy__link">Privacy
-                            Policy</a>
+                    <img src="../assets/img/checkbox-unchecked.svg" alt="icon of a checkbox">
+                    <span>I accept the <a href="/pages/privacy-policy.html">Privacy Policy</a>
                     </span>
                 </p>
             </div>
-                <button class="btn">Sign up</button>
+            <button class="btn filled-btn ">Sign up</button>
         </form>
     </main>
 
     <footer class="content-wrapper">
         <div class="footer__privacy-legal-box">
-            <a href="/pages/privacy-policy.html" class="footer__privacy-legal-box__links">Privacy Policy</a>
-            <a href="/pages/legal-notice.html" class="footer__privacy-legal-box__links">Legal notice</a>
+            <a href="/pages/privacy-policy.html">Privacy Policy</a>
+            <a href="/pages/legal-notice.html">Legal notice</a>
         </div>
     </footer>
 
