changed defer in JS files in html. corrected spelling, added go back arrow in help html

--- a/pages/board.html
+++ b/pages/board.html
@@ -14,17 +14,16 @@
         <link rel="stylesheet" href="../styles/board.css">
         <link rel="stylesheet" href="../styles/ticket.css">
 
-        <script src="../script.js">defer</script>
-        <script src="../scripts/navigation.js">defer</script>
-        <script src="../scripts/board.js">defer</script>
-        <script src="../scripts/drag_and_drop.js">defer</script>
-        <script src="../scripts/ticket.js">defer</script>
-        <script src="../scripts/add_task.js">defer</script>
-        <script src="../scripts/dialog_add_contact.js">defer</script>
-        <script src="../templates/tpl_ticket.js">defer</script>
-        <script src="../templates/tpl_board.js">defer</script>
-        <script src="../templates/tpl_add_task.js">defer</script>
-
+        <script src="../script.js" defer></script>
+        <script src="../scripts/navigation.js" defer></script>
+        <script src="../scripts/board.js" defer></script>
+        <script src="../scripts/drag_and_drop.js" defer></script>
+        <script src="../scripts/ticket.js" defer></script>
+        <script src="../scripts/add_task.js" defer></script>
+        <script src="../scripts/dialog_add_contact.js" defer></script>
+        <script src="../templates/tpl_ticket.js" defer></script>
+        <script src="../templates/tpl_board.js" defer></script>
+        <script src="../templates/tpl_add_task.js" defer></script>
     </head>
 
     <body>
@@ -101,7 +100,7 @@
                             <div id="in-progress-tasks" class="tasks">
                                 <div class="task">
                                     <span class="task_epic">User Story</span>
-                                    <span class="taskt_title">Kochwelt bla BLubb!</span>
+                                    <span class="task_title">Kochwelt bla BLubb!</span>
                                     <span class="task_description">Rezepte und son kram</span>
                                     <div class="task_subtasks-and-progressbar-box">
                                         <span class="task_progressbar">progressbar</span>
