corrected links inside projekt linking with other pages

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kanban Board</title>
-        <link rel="icon" href="/assets/img/logo-black.png" type="image/x-icon">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="styles/login-signup.css">
+        <link rel="icon" href="./assets/img/logo-black.png" type="image/x-icon">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./styles/login-signup.css">
     </head>
 
     <body>
         <header class="content-wrapper header">
-            <img class="header__joinlogo" src="/assets/img/logo-black.png"
+            <img class="header__joinlogo" src="./assets/img/logo-black.png"
                 alt="the word: join with a big J with a blue dot on the left side,">
             <div class="header__signup">
                 <span class="header__signup__message">Not a Join user?</span>
-                <button class="btn header__signup__signupBtn filled-btn" onclick="location.href='/pages/sign-up.html'">Sign
+                <button class="btn header__signup__signupBtn filled-btn" onclick="location.href='./pages/sign-up.html'">Sign
                     up</button>
             </div>
         </header>
@@ -30,12 +30,12 @@
                 <div class="form__inputfields">
                     <div class="inputfield__wrapper">
                         <input type="email" placeholder="Email" aria-label="email" >
-                        <img src="/assets/img/mail.svg" alt="icon of an email">
+                        <img src="./assets/img/mail.svg" alt="icon of an email">
                     </div>
 
                     <div class="inputfield__wrapper">
                         <input type="password" placeholder="Password" aria-label="password" >
-                        <img src="/assets/img/lock.svg" alt="icon of a lock">
+                        <img src="./assets/img/lock.svg" alt="icon of a lock">
                     </div>
                 </div>
                 
@@ -48,8 +48,8 @@
 
         <footer class="content-wrapper">
             <div class="footer__privacy-legal-box">
-                <a href="/pages/privacy-policy.html">Privacy Policy</a>
-                <a href="/pages/legal-notice.html">Legal notice</a>
+                <a href="./pages/privacy-policy.html">Privacy Policy</a>
+                <a href="./pages/legal-notice.html">Legal notice</a>
             </div>
         </footer>
     </body>
